@@ -1,3 +1,12 @@
+2018-09-18  Patrick McGehearty  <patrick.mcgehearty@oracle.com>
+	     Gerd Rausch <gerd.rausch@oracle.com>
+
+	Orabug 28481550] Resolve funlockfile/flockfile issue.
+	* sysdeps/pthread/flockfile.c (__flockfile):
+	Match behavior of LOCK_STREAM.
+	* sysdeps/pthread/funlockfile.c (__funlockfile):
+	Match behavior of UNLOCK_STREAM.
+
 2019-03-25  Mike Crowe  <mac@mcrowe.com>
 
 	* nptl/tst-rwlock14.c (do_test): Replace duplicate calls to
